# Ailab_mephi

./: pyproject.toml
components/test_checker/: main.py
components/test_checker/database/: __init__.py  models.py  serialaze.py
components/test_generator/: main.py
components/test_generator/database/: __init__.py  models.py  serialaze.py
components/test_sender/: main.py
db/: abstract_client.py
